<resources>
    <string name="app_name">Food Mobile</string>
    <string name="input_email_text">Type your email</string>
    <string name="input_password_text">Type your password</string>
    <string name="input_phone_text">Type your phone number</string>
    <string name="input_address_text">Type your address</string>
    <string name="input_house_no_text">Type your house number</string>
    <string name="input_city_text">Type your city</string>
    <string name="input_fullname_text">Type your full name</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="access_failed_permission_message">Akses ditolak, silahkan ubah perizinan di pengaturan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_description">Find your best ever meal</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_description">Register and eat</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="house_number">House Number</string>
    <string name="city">City</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="full_name">Full Name</string>
    <string name="next_continue">Continue</string>
    <string name="address_title">Address</string>
    <string name="address_description">Make sure it’s valid</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="account">Account</string>
    <string name="home_title">FoodMarket</string>
    <string name="home_description">Let’s get some foods</string>
    <string name="order_title">Your Orders</string>
    <string name="order_description">Wait for the best meal</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_wait">Please Wait</string>
</resources>